2004-11-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-forbidden-properties): Fixed typo in doc
	string.

2004-11-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-util.el (gnus-replace-in-string): Added doc string.

	* nnmail.el (nnmail-split-header-length-limit): Increase to 2048
	to avoid problems when splitting mails with many recipients.

2004-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-sum.el (gnus-summary-exit): Remove redundant and harmful
	pop-to-buffer, covered by the subsequent gnus-configure-windows.

2004-12-05  Nelson Ferreira  <nelson.ferreira@ieee.org>

	* spam-stat.el (spam-stat-save): Load the hashtable from disk only
	if there is no hashtable in memory or file modification time is
	newer than cached timestamp.

2004-12-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-limit-to-recipient): Implement
	not-matching option.

2004-12-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-limit-to-recipient): New function.
	Suggested David Mazieres in analogy to rmail-summary-by-recipients.
	(gnus-summary-limit-map, gnus-summary-make-menu-bar): Add it.
	(gnus-article-sort-by-recipient, gnus-summary-sort-by-recipient):
	New functions.  Suggested by Uwe Brauer <oub@mat.ucm.es>.
	(gnus-summary-mode-map, gnus-summary-make-menu-bar): Add it.

2004-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-forward-make-body-mml): Remove headers
	according to message-forward-ignored-headers if a message is
	decoded.

2004-12-02  Romain Francoise  <romain@orebokech.com>

	* message.el (message-forward-make-body-plain): Always remove
	headers according to message-forward-ignored-headers.

2004-12-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-summary-prepare-exit): remove the
	gnus-summary-limit pop for now, it has problems with ham marks for
	me

2004-11-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-summary-prepare-exit): use gnus-summary-limit
	correctly
